--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <main class="principal">
         <section class="principal-conteudo">
             <h1 class="principal-titulo">Eleve seu negócio digital a outro nível <strong class="destaque-titulo">um Front-end de qualidade!</strong></h1>
-            <p class="principal-texto">Olá! Joana Santos, desenvolvedora Front-end com especialidade em React, HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
+            <p class="principal-texto">Olá! Sérgio Sousa, desenvolvedora Front-end com especialidade em React, HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
             <div class="principal-butao">
                 <h2 class="principal-butao-subtitulo">Acesse minhas redes:</h2>
                 <a class="principal-butao-butao" href="https://www.linkedin.com/in/sergiosousa-ti/">
