#style: alteração da url github e linkendin

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
             <p class="principal-texto">Olá! Sérgio Sousa, desenvolvedora Front-end com especialidade em React, HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
             <div class="principal-butao">
                 <h2 class="principal-butao-subtitulo">Acesse minhas redes:</h2>
-                <a class="principal-butao-butao" href="https://www.linkedin.com/in/sergiosousa-ti/">
+                <a class="principal-butao-butao" href="https://www.linkedin.com/in/sergiosousa-tec/">
                     <img src="./imagens/Assets-aula2-curso3-html-e-css-main/assets/linkedin.png" alt="Linkendin">
                     Linkendin
                 </a>
-                <a class="principal-butao-butao" href="https://github.com/sergiosousa76">
+                <a class="principal-butao-butao" href="https://github.com/SergioDevSousa">
                     <img src="./imagens/Assets-aula2-curso3-html-e-css-main/assets/github.png" alt="Github">
                     Github
                 </a>
