#style: melhora no designe

--- a/about.html
+++ b/about.html
@@ -16,8 +16,8 @@
     <main class="principal">
         <section class="principal-conteudo">
             <h1 class="principal-titulo">Sobre mim</h1>
-            <p class="principal-texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Error commodi ducimus sapiente laudantium sunt earum possimus temporibus voluptas itaque, iusto hic culpa officiis nostrum corporis vero quae! Omnis, tempora facilis.</p>
-            <p class="principal-texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi aperiam sapiente facilis sed officia, necessitatibus laudantium. Odit debitis odio distinctio? Provident, error! Dolorum distinctio, possimus ut dicta assumenda vero quaerat?</p>
+            <p class="principal-texto">Com Formação em Front-End pela ORACLE ONE em 06/2024 e estudante de Análise de Desenvolvimento de Sistemas pela UNIFATECIE (em andamento).</p>
+            <p class="principal-texto">Atualmente estou atualizando meus trabalhos e incluindo em meu portifólio para que as pessoas possa ver meu trabalho e espero que meus trabalhos possa trazer soluções para seus problemas.</p>
         </section>
         <div class="fotografia-dev">
             <img src="./imagens/Untitled-1.png" alt="Foto do DEV trabalhando">
