--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <main class="principal">
         <section class="principal-conteudo">
             <h1 class="principal-titulo">Eleve seu negócio digital a outro nível <strong class="destaque-titulo">um Front-end de qualidade!</strong></h1>
-            <p class="principal-texto">Olá! Sérgio Sousa, desenvolvedora Front-end com especialidade em React, HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
+            <p class="principal-texto">Olá! Meu nome é Sérgio Sousa, Desenvolvedor Front-end. Ajudo pequenos negócios e designers a colocarem em prática boas idéias. Vamos conversar?</p>
             <div class="principal-butao">
                 <h2 class="principal-butao-subtitulo">Acesse minhas redes:</h2>
                 <a class="principal-butao-butao" href="https://www.linkedin.com/in/sergiosousa-tec/" target="_blank">
@@ -31,7 +31,7 @@
             </div>
         </section>
         <div class="fotografia-dev">
-            <img src="./imagens/Untitled-1.png" alt="Foto do DEV trabalhando">
+            <img src="./imagens/Untitled-1.png" alt="foto-dev"/>
         </div>
     </main>
     <footer class="rodape">
